# generic-arrayvec

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE.md  Taskfile.yml  appveyor.yml
src/: lib.rs  plumbing.rs
tests/: functionality.rs  version-numbers.rs
