[package]
name = "generic-arrayvec"
version = "0.2.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
description = "Interop between the arrayvec and generic_array crates"
repository = "https://github.com/Seeker14491/generic-arrayvec"
readme = "README.md"
keywords = ["arrayvec", "generic_array", "generic", "vec", "stack"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "Cargo.toml",
]

[badges]
appveyor = { repository = "Seeker14491/generic-arrayvec", branch = "master", service = "github" }
travis-ci = { repository = "Seeker14491/generic-arrayvec", branch = "master" }

[dependencies]
arrayvec = "0.4.7"
generic-array = "0.13.0"
