[package]
name = "generic-arrayvec"
version = "0.3.1"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"
description = "Interop between the arrayvec and generic_array crates"
repository = "https://github.com/Seeker14491/generic-arrayvec"
readme = "README.md"
keywords = ["arrayvec", "generic_array", "generic", "vec", "stack"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"
include = [
    "src/",
    "LICENSE-*",
]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["std"]
arrayvec-sizes-33-128 = ["arrayvec/array-sizes-33-128"]
arrayvec-sizes-129-255 = ["arrayvec/array-sizes-129-255"]
generic-array-more-lengths = ["generic-array/more_lengths"]
serde = ["arrayvec/serde"]
std = ["arrayvec/std"]

[dev-dependencies]
version-sync = "0.9"

[dependencies]
arrayvec = { version = "0.5", default-features = false }
generic-array = "0.14"
